@@ -79,6 +79,9 @@ class CDetailView extends CWidget
 	 * to the "type" option as described below.</li>
 	 * <li>type: the type of the attribute that determines how the attribute value would be formatted.
 	 * Please see above for possible values.
+	 * <li>template: the template used to render the attribute. If this is not specified, {@link itemTemplate}
+	 * will be used instead. For more details on how to set this option, please refer to {@link itemTemplate}.
+	 * This option is available since version 1.1.1.</li>
 	 * </ul>
 	 */
 	public $attributes;
@@ -198,7 +201,7 @@ class CDetailView extends CWidget
 
 			$tr['{value}']=$value===null ? $this->nullDisplay : $formatter->format($value,$attribute['type']);
 
-			echo strtr($this->itemTemplate,$tr);
+			echo strtr(isset($attribute['template']) ? $attribute['template'] : $this->itemTemplate,$tr);
 		}
 
 		echo CHtml::closeTag($this->tagName);
