@@ -9,6 +9,7 @@ Version 1.1.1 to be released
 - Bug #14: Added documentation about the "js:" prefix in CJuiSortable (sebas)
 - Enh: Added CListView.loadingCssClass and CGridView.loadingCssClass (Qiang)
 - Enh: Added filtering support for CGridView (Qiang)
+- Enh: Added 'template' option to each attribute specification in CDetailView (Qiang)
 - Chg: CMenu will render the 'active' CSS class in the container tag of the link (Qiang)
 
 Version 1.1.0 January 10, 2010
